--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height:100vh;
+    height:fit-content;
     flex-direction: column;
 }
-.content-items{
-    display:flex;
-    justify-content: center;
-    align-items: center;
+nav{
+    width: 100%;
+}
+input[type=radio] {
+    margin:0 0.25rem 0 1rem;
+    align-self: center;
+}
+.options{
+    display: flex;
+    flex-grow: 1;
+    justify-content:center;
 }
